--- a/Article_processor.ipynb
+++ b/Article_processor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['articles_afp.com.json', 'articles_aljazeera.com.json', 'articles_cnn.com.json', 'articles_entornointeligente.com.json', 'articles_foxnews.com.json', 'articles_france24.com.json', 'articles_globaltimes.cn.json', 'articles_hongkongfp.com.json', 'articles_ifpnews.com.json', 'articles_iran-daily.com.json', 'articles_laht.com.json', 'articles_meduza.io.json', 'articles_nytimes.com.json', 'articles_rt.com.json', 'articles_scmp.com.json', 'articles_sputniknews.com.json', 'articles_tehrantimes.com.json', 'articles_themoscowtimes.com.json', 'articles_voanews.com.json']\n"
+      "['articles_afp.com.json', 'articles_foxnews.com.json', 'articles_iran-daily.com.json', 'articles_aljazeera.com.json', 'articles_meduza.io.json', 'articles_nytimes.com.json', 'articles_tehrantimes.com.json', 'articles_voanews.com.json', 'articles_entornointeligente.com.json', 'articles_ifpnews.com.json', 'articles_france24.com.json', 'articles_cnn.com.json', 'articles_sputniknews.com.json', 'articles_globaltimes.cn.json', 'articles_laht.com.json', 'articles_rt.com.json', 'articles_hongkongfp.com.json', 'articles_themoscowtimes.com.json', 'articles_scmp.com.json']\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
     "\n",
     "for file_name in os.listdir(cleaned_data_dir):\n",
     "    file_path = os.path.join(cleaned_data_dir,file_name)\n",
-    "    if not(os.path.isfile(file_path) and file.endswith('.json')):\n",
+    "    if not(os.path.isfile(file_path) and file_name.endswith('.json')):\n",
     "        continue\n",
     "        \n",
     "    source = file_name.split('_')[1].split('.')[0]\n",
@@ -71,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
